完成选择城市弹窗UI交互

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="input_panel_snapchat">阅后即焚</string>
     <string name="input_panel_audio_call">语音通话</string>
     <string name="input_panel_video_call">视频通话</string>
+    <string name="app_text_settag">setTag</string>
 </resources>
